@@ -1,5 +1,6 @@
 Changes
 Cycle.pm
+Cycle/Czech/Woman.pm
 Cycle/Season.pm
 inc/Module/Install.pm
 inc/Module/Install/AuthorRequires.pm
@@ -18,6 +19,8 @@ MANIFEST			This list of files
 META.yml
 README
 SIGNATURE
+t/Data-Const-Planning-Cycle-Czech-Woman/01-use.t
+t/Data-Const-Planning-Cycle-Czech-Woman/02-version.t
 t/Data-Const-Planning-Cycle-Season/01-use.t
 t/Data-Const-Planning-Cycle-Season/02-version.t
 t/Data-Const-Planning-Cycle-Season/03-new.t
@@ -26,6 +29,8 @@ t/Data-Const-Planning-Cycle/01-use.t
 t/Data-Const-Planning-Cycle/02-version.t
 t/Data-Const-Planning-Cycle/03-new.t
 t/Data-Const-Planning-Cycle/04-data.t
+xt/Data-Const-Planning-Cycle-Czech-Woman/01-pod_coverage.t
+xt/Data-Const-Planning-Cycle-Czech-Woman/02-pod.t
 xt/Data-Const-Planning-Cycle-Season/01-pod_coverage.t
 xt/Data-Const-Planning-Cycle-Season/02-pod.t
 xt/Data-Const-Planning-Cycle/01-pod_coverage.t
