@@ -1,0 +1,9 @@
+use strict;
+use warnings;
+
+use Data::Const::Planning::Cycle::Czech::Woman;
+use Test::More 'tests' => 2;
+use Test::NoWarnings;
+
+# Test.
+is($Data::Const::Planning::Cycle::Czech::Woman::VERSION, 0.02, 'Version.');
