@@ -1,4 +1,5 @@
 0.02
+ - Add Czech::Woman cycle.
  - Move Cycle code to Season.pm.
  - Rewrite Cycle to common Data::Const class.
 
